[package]
name = "img_rust"
version = "0.2.0"
authors = ["Willi Stepp <willi.stepp@epfl.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "img_rust"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies.ndarray]
version = "0.14"
features = ["rayon"]

[dependencies]
numpy = "0.13.1"
rayon = "1.5.0"