[package]
name = "img_rust"
version = "0.4.0"
authors = ["Willi Stepp <willi.stepp@epfl.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "img_rust"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.19.1"
features = ["extension-module"]

[dependencies.ndarray]
version = "0.15"
features = ["rayon"]

[dependencies]
numpy = "0.19"
rayon = "1.5.0"
